--- a/googlesheets_lab.Rmd
+++ b/googlesheets_lab.Rmd
@@ -18,9 +18,9 @@ dat = gs_read(gsurl1)
 head(dat)
 ```
 
-3. Look at arguments for cell_rows, cell_limits, cell_cols
+3. Look at arguments for cell_rows, cell_limits, cell_cols (this opens a website so i took it out)
 ```{r, chunk 3, include=FALSE}
-?gs_read
+#?gs_read
 ```
 
 4. Read in first two columns
@@ -37,10 +37,10 @@ nrow(dat)
 6. Logical var for whether students have more than 2 years of R experience
 ```{r, chunk 6}
 dat$rexp <- as.numeric(dat$"Years of R experience")
-
-
+morethan2 <- as.numeric(dat$'Years of R experience') > 2
+morethan2
 ```
 
-
+See key for the rest 
 
 
